2008-03-25  Martin Hunt  <hunt@redhat.com>

	* unwind.c (unwind): Return a positive number to indicate
	that unwinding is done.

2008-03-17  Eugene Teo  <eteo@redhat.com>

	PR 5947
	* autoconf-tsc-khz.c: Remove "&& defined(__i386__)" to make the test
	more pessimistic.

2008-03-14  Masami Hiramatsu <mhiramat@redhat.com>

	PR 3542
	* autoconf-unregister-kprobes.c : New file.

2008-03-10  Dave Brolley  <brolley@redhat.com>

	PR5189
	* vsprintf.c (_stp_vsnprintf): Arguments for dynamic width and precision
	are of type 'int' again.
	* loc2c-runtime.h (deref_string): Copy the data only if dst is not NULL.
	(deref_buffer): New macro.

2008-02-27  Martin Hunt  <hunt@redhat.com>

	* sym.h (_stp_module): Add text_size, lock, and unwind data
	pointer.	
	* sym.c (_stp_find_module_by_addr): New function.
	(_stp_kallsyms_lookup): Call _stp_find_module_by_addr().
	(_stp_get_unwind_info): New.
	
	* runtime.h: Move debug macros to debug.h. Include it.
	* debug.h: New file.
	* map.c: Update debug calls.
	* map-gen.c: Update debug calls.
	* pmap-gen.c: Update debug calls.
	
	* mempool.c: New file. 
	
2008-02-27  Dave Brolley  <brolley@redhat.com>

	PR5189
	* vsprintf.c (_stp_vsnprintf): Extract arguments of type int64_t for
	dynamic width and precision. Implement width and precision correctly for
	the %b format specifier. Implement the %m specifier.

2008-02-06  Masami Hiramatsu <mhiramat@redhat.com>

	* stack-ia64.c (__stp_show_stack_sym): Skip printing symbol if (ip ==
	REG_IP(regs)).

2008-01-29  Martin Hunt  <hunt@redhat.com>

	* io.c (_stp_vlog): Use get_cpu() instead
	of smp_processor_id() because this function can get 
	called with interrupts enabled.

2008-01-29  Martin Hunt  <hunt@redhat.com>	

	* alloc.c (struct _stp_malloc_type): Remove
	redundant field.

2008-01-28  Martin Hunt  <hunt@redhat.com>

	* alloc.c: Use DEFINE_SPINLOCK.
	* counter.c: Ditto.
	* pmap-gen.c: Ditto.
	* print_new.c: Ditto.
	* stat.c: Ditto.
	
2008-01-27  Frank Ch. Eigler  <fche@elastic.org>
