@@ -8,40 +8,65 @@
  * later version.
  */
 
-static inline int _stp_valid_stack_ptr(unsigned long context, unsigned long p)
+static int _stp_valid_stack_ptr(unsigned long context, unsigned long p)
 {
 	return	p > context && p < context + THREAD_SIZE - 3;
+}
+
+/* DWARF unwinder failed.  Just dump intereting addresses on kernel stack. */
+static void _stp_stack_print_fallback(unsigned long context, unsigned long stack, int verbose)
+{
+	unsigned long addr;
+	while (_stp_valid_stack_ptr(context, stack)) {
+		if (unlikely(__stp_get_user(addr, (unsigned long *)stack))) {
+			/* cannot access stack.  give up. */
+			return;
+		}
+		_stp_func_print(addr, verbose, 0);
+		stack++;
+	}
 }
 
 static void __stp_stack_print (struct pt_regs *regs, int verbose, int levels)
 {
 	unsigned long *stack = (unsigned long *)&REG_SP(regs);
 	unsigned long context = (unsigned long)stack & ~(THREAD_SIZE - 1);
-	unsigned long addr;
 
 #ifdef	CONFIG_FRAME_POINTER
-	{
-                #ifdef STAPCONF_X86_UNIREGS
-                unsigned long ebp = regs->bp;
-                #else
-		unsigned long ebp = regs->ebp;
-		#endif
-		
-		while (_stp_valid_stack_ptr(context, (unsigned long)ebp)) {
-			addr = *(unsigned long *)(ebp + 4);
-			if (verbose) {
-				_stp_print_char(' ');
-				_stp_symbol_print (addr);
-				_stp_print_char('\n');
-			} else
-				_stp_printf ("0x%08lx ", addr);
-			ebp = *(unsigned long *)ebp;
-		}
+	/* FIXME: need to use _stp_func_print() and safe copy */
+	unsigned long addr;
+	
+#ifdef STAPCONF_X86_UNIREGS
+	unsigned long ebp = regs->bp;
+#else
+	unsigned long ebp = regs->ebp;
+#endif /* STAPCONF_X86_UNIREGS */
+	
+	while (_stp_valid_stack_ptr(context, (unsigned long)ebp)) {
+		addr = *(unsigned long *)(ebp + 4);
+		if (verbose) {
+			_stp_print_char(' ');
+			_stp_symbol_print (addr);
+			_stp_print_char('\n');
+		} else
+			_stp_printf ("0x%08lx ", addr);
+		ebp = *(unsigned long *)ebp;
 	}
 #else
-	while (_stp_valid_stack_ptr(context, (unsigned long)stack)) {
-		addr = *stack++;
-		_stp_func_print(addr, verbose, 1);
+	struct unwind_frame_info info;
+	arch_unw_init_frame_info(&info, regs);
+	while (!arch_unw_user_mode(&info)) {
+		int ret = unwind(&info);
+		dbug_unwind(1, "ret=%d PC=%lx SP=%lx\n", ret, UNW_PC(&info), UNW_SP(&info));
+		if (ret < 0) {
+			_stp_stack_print_fallback(context, UNW_SP(&info), verbose);
+			break;
+		}
+		if (ret)
+			break;
+		_stp_func_print(UNW_PC(&info), verbose, 1);
 	}
-#endif
+//	_stp_printf("***********************\n");
+//	_stp_stack_print_fallback(context, (unsigned long)stack, verbose);
+#endif /* CONFIG_FRAME_POINTER */
 }
