@@ -1,3 +1,10 @@
+2008-03-26  Martin Hunt  <hunt@redhat.com>
+	    Fixes to get i386 working.
+	* unwind.c (unwind): Fix types in debug print.
+	* stack-i386.c (_stp_stack_print_fallback): New function.
+	(__stp_stack_print): Call _stp_stack_print_fallback() if unwinder
+	appears to fail.
+
 2008-03-25  Martin Hunt  <hunt@redhat.com>
 
 	* unwind.c (unwind): Return a positive number to indicate
